Used an overflow auto method to fix a clearing problem

--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,5 @@ body {
   background-color: rgb(79, 185, 227);
   padding: 10px;
   color: #fff;
-}
-
-.wrapper::after {
-  content: "";
-  clear: both;
-  display: block;
+  overflow: auto;
 }
